--- a/src/Screen/Navbar/Navbar.css
+++ b/src/Screen/Navbar/Navbar.css
@@ -1,16 +1,13 @@
-.navbar {
-    /* background-color: var(--Clikr_BlackColor); */
-    color: var(--Clikr_BlackColor);
-    height: 4.3rem;
-}
+
 .menu-item {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
     cursor: pointer;
 }
-.menu-box{
-    line-height: 2;
-}
+/* .options_name{
+    margin-left: 15px;
+} */
+
 i{
     font-size: var(--h3-font-size);
 }
@@ -18,4 +15,14 @@ i{
     color: var(--Clikr_BlackColor);
     text-decoration: none;
 
+}
+.sidebar_menu{
+    /* width: 2%; */
+    /* background-color: aquamarine; */
+    height: 100vh;
+    position: fixed;
+    line-height: 3.4;
+    list-style: none;
+    /* padding-top: 60px; */
+    /* padding-left: 30px; */
 }
